--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="http:necolas.github.io/normalize.css/">
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet"  href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container">
