add routing to self-define/ built-in logout page and link the logout text on header page to the logout page

--- a/templates/header.html
+++ b/templates/header.html
@@ -12,7 +12,7 @@
            <ul class="nav navbar-nav navbar-right">
                  {% if user.is_authenticated %}
                  <li><a href="#" >{{user.username}}</a></li>
-                 <li><a href="#" >Logout</a></li>
+                 <li><a href="{% url 'account:user_logout' %}" >Logout</a></li>
                  {% else %}
                  <li><a href="{% url 'account:user_login' %}">LOGIN</a></li>
                  {% endif %}
