--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <div class="container">
     <hr>
-    <p class="text-center">版权所有 2018, tianwei1992.</p>
+    <p class="text-center">版权所有 2018, 田田田田.</p>
 </div>
 
