--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,16 @@
             </ul>
            <ul class="nav navbar-nav navbar-right">
                  {% if user.is_authenticated %}
-                 <li><a href="#" >{{user.username}}</a></li>
+                 <li>
+                    <div class="dropdown" style="margin-top:8px">
+                        <button type="button" class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu" data-toggle="dropdown">{{ user.username }}<span class="caret"></span>
+                       </button>
+                        <ul class="dropdown-menu" role="menu">
+                             <li><a href="{% url 'account:password_change' %}">修改密码</a></li>
+                        </ul>
+                    </div>
+                 </li>
+                 <!--      <li><a href="#" >{{user.username}}</a></li>               -->
                  <li><a href="{% url 'account:user_logout' %}" >Logout</a></li>
                  {% else %}
                  <li><a href="{% url 'account:user_login' %}">LOGIN</a></li>
@@ -20,3 +29,6 @@
         </div>
     </nav>
 </div>
+
+<script src="{% static 'js/jquery.js' %}"></script>
+<script src="{% static 'js/bootstrap.js' %}"></script>
