--- a/templates/account/password_reset_confirm.html
+++ b/templates/account/password_reset_confirm.html
@@ -1,42 +1,22 @@
-{% extends "admin/base_site.html" %}
-{% load i18n static %}
-
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}">{% endblock %}
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-&rsaquo; {% trans 'Password reset confirmation' %}
-</div>
-{% endblock %}
-
-{% block title %}{{ title }}{% endblock %}
-{% block content_title %}<h1>{{ title }}</h1>{% endblock %}
+{% extends "base.html" %}
+{% block title %}Pssword reset{% endblock %}
 {% block content %}
+<div class="row text-center vertical-middle-sm">
+    <h1>Reset Password</h1>
+    <p>Please enter your new password twice so we can verify you typed it in correctly.</p>
 
-{% if validlink %}
-
-<p>{% trans "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
-
-<form method="post">{% csrf_token %}
+<form class="form-horizontal" action="." method="post">{% csrf_token %}
 <fieldset class="module aligned">
-    <div class="form-row field-password1">
-        {{ form.new_password1.errors }}
-        <label for="id_new_password1">{% trans 'New password:' %}</label>
-        {{ form.new_password1 }}
+    <div class="form-group">
+        <label class="col-md-5 control-label text-right">New password:</label>
+        <div class="col-md-6 text-left">{{ form.new_password1 }}</div>
     </div>
-    <div class="form-row field-password2">
-        {{ form.new_password2.errors }}
-        <label for="id_new_password2">{% trans 'Confirm password:' %}</label>
-        {{ form.new_password2 }}
+    <div class="form-group">
+        <label class="col-md-5 control-label text-right">Confirm:</label>
+        <div class="col-md-6 text-left">{{ form.new_password2 }}</div>
     </div>
-    <input type="submit" value="{% trans 'Change my password' %}">
-</fieldset>
+    <input type="submit" value="Change my password" class="btn btn-primary btn-lg"/>
 </form>
 
-{% else %}
-
-<p>{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
-
-{% endif %}
-
+</div>
 {% endblock %}
