--- a/templates/account/password_reset_form.html
+++ b/templates/account/password_reset_form.html
@@ -1,29 +1,16 @@
-{% extends "admin/base_site.html" %}
-{% load i18n static %}
-
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}">{% endblock %}
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-&rsaquo; {% trans 'Password reset' %}
+{% extends "base.html" %}
+{% block title %} reset {% endblock %}
+{% block content %}
+<div class = "row text-center vertical-middle-sm">
+    <h1>Forgotten your password? Reset,please.</h1>
+    <p>Enter your email to set a new password.</p>
+    <form class="form-horizontal" action="." method="post">{% csrf_token %}
+        <div class="form-group">
+            <label class="col-md-5 control-label text-right">Email</label>
+            <div class="col-md-6 text-left">{{ form.email }} </div>
+       </div>
+       <input type="submit" value="Send email" class="btn btn-primary btn-1g">
+   </form>
 </div>
 {% endblock %}
 
-{% block title %}{{ title }}{% endblock %}
-{% block content_title %}<h1>{{ title }}</h1>{% endblock %}
-{% block content %}
-
-<p>{% trans "Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one." %}</p>
-
-<form method="post">{% csrf_token %}
-<fieldset class="module aligned">
-    <div class="form-row field-email">
-        {{ form.email.errors }}
-        <label for="id_email">{% trans 'Email address:' %}</label>
-        {{ form.email }}
-    </div>
-    <input type="submit" value="{% trans 'Reset my password' %}">
-</fieldset>
-</form>
-
-{% endblock %}
