add a link to ./account/edit-my-information/ on both the general header area and my-information display page

--- a/templates/account/myself.html
+++ b/templates/account/myself.html
@@ -46,5 +46,6 @@
             <p>picture</p>
         </div>
     </div>
+    <a href="{% url 'account:edit_my_information' %}"><button class="btn btn-primary btn-lg">edit my information</button></a>
 </div>
 {% endblock %} 
