add entry to photo uploading page as pop-ups on page ./account/my-information

--- a/templates/account/imagecrop.html
+++ b/templates/account/imagecrop.html
@@ -60,7 +60,12 @@ $(window).load(function() {
             type: 'POST', 
             data: {"img": img},
             success:function(e){
-                location.href= '{% url "account:my_information" %}'
+                //location.href= '{% url "account:my_information" %}'
+                if(e == "1"){
+                    parent.location.reload();
+                }else{
+                    alert("sorry, the picture can't be uploaded.")
+                }
             },
         });
 	})
