--- a/templates/account/myself.html
+++ b/templates/account/myself.html
@@ -56,4 +56,20 @@
     </div>
     <a href="{% url 'account:edit_my_information' %}"><button class="btn btn-primary btn-lg">edit my information</button></a>
 </div>
+
+<script type="text/javascript" src='{% static "js/jquery.js" %}'></script>
+<script type="text/javascript" src='{% static "js/layer.js" %}'></script>
+
+<script>
+function upload_image_layer(){
+    layer.open({
+        title:"上传头像",
+        area:['650px','600px'],
+        type:2,
+        content:"{% url 'account:my_image' %}",
+});
+}
+</script>
+
+
 {% endblock %} 
