--- a/templates/article/column/article_column.html
+++ b/templates/article/column/article_column.html
@@ -3,7 +3,7 @@
 {% block title %}article column{% endblock %}
 {% block content %}
 <div>
-    <p class="text-right"><button class="btn btn-primary">add column</button></p>
+    <p class="text-right"><button id="add_column" onclick="add_column()" class="btn btn-primary">add column</button></p>
     <table class="table talbe-hover">
     <tr>
         <td>序号</td>
@@ -22,4 +22,39 @@
     </table>
 </div>
 </div>
+
+<script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/layer.js' %}"></script>
+<script type="text/javascript">
+    function add_column(){
+        var index = layer.open({
+            type:1,
+            skin:"layui-layer-rim",
+            area:["400px","200px"],
+            title:"新增栏目",
+            content:'<div class="text-center" style="margin-top:20px"><p>请输入新的栏目名称</p><p>{{column_form.column}}</p></div>',
+            btn:["确定","取消"], 
+            yes:function(index, layero){
+                column_name = $('#id_column').val();
+                $.ajax({
+                    url:'{% url "article:article_column" %}',
+                    type:"POST",
+                    data:{"column":column_name},
+                    success:function(e){
+                        if(e=="1"){
+                            parent.location.reload();
+                            layer.msg("good");
+                        }else{
+                            layer.msg("此栏目已有，请更换名称");
+                        }
+                    },
+                });
+            },
+            btn2: function(index, layero){
+                layer.close(index);
+            }
+        });
+    }
+</script>
+
 {% endblock %}
