--- a/templates/article/column/article_column.html
+++ b/templates/article/column/article_column.html
@@ -14,7 +14,10 @@
     <tr>
         <td>{{ forloop.counter }}</td>
         <td>{{ column.column }}</td>
-        <td> -- </td>
+        <td> 
+            <a name="edit" href="javascript:" onclick="edit_column(this, {{ column.id }})"<span class="glyphicon glyphicon-pencil"></span><a>
+            <a name="delete" href="javascript:" onclick="del_column(this, {{ column.id }})"<span class="glyphicon glyphicon-trash" style="margin-left:20px;"></span></a>
+         </td>
     </tr>
     {% empty %}
     <p>还没有设置栏目，太懒了.</p>
@@ -55,6 +58,36 @@
             }
         });
     }
+
+    function edit_column(the, column_id){
+        var name = $(the).parents("tr").children("td").eq(1).text();
+        var index = layer.open({
+            type:1,
+            skin:"layui-layer-rim",
+            area:["400px", "200px"],
+            title:"编辑栏目",
+            content:'<div class="text-center" style="margin-top:20px"><p>请输入新的栏目名称</p><p><input type="text" id="new_name" value="'+name+'"></p></div>',
+            btn:["确定","取消"],
+            yes:function(index, layero){
+                new_name = $("#new_name").val();
+                $.ajax({
+                url:"{% url 'article:rename_article_column' %}",
+                type:"POST",
+                data:{"column_id":column_id, "column_name":new_name},
+                success:function(e){
+                    if(e=="1"){
+                        parent.location.reload();
+                        layer.msg("good");
+                    }else{
+                        layer.msg("栏目名称修改失败。")
+                    }
+                },
+            });
+        },
+    });
+}
+
+
 </script>
 
 {% endblock %}
