add a link to article-post on article/leftslider.html

--- a/templates/article/leftslider.html
+++ b/templates/article/leftslider.html
@@ -2,4 +2,7 @@
     <div class="text-center" style="margin-top:5px">
         <p><a href="{% url 'article:article_column' %}">栏目管理</a></p>
     </div>
+    <div class="text-center" style="margin-top:5px">
+        <p><a href="{% url 'article:article_post' %}">文章发表</a></p>
+    </div>
 </div>
