realize article-info display page with url ./article/article-list

--- a/templates/article/leftslider.html
+++ b/templates/article/leftslider.html
@@ -5,4 +5,7 @@
     <div class="text-center" style="margin-top:5px">
         <p><a href="{% url 'article:article_post' %}">文章发表</a></p>
     </div>
+    <div class="text-center" style="margin-top:5px">
+        <p><a href="{% url 'article:article_list' %}">文章列表</a></p>
+    </div>
 </div>
