add auto-turn to article-list  after a successful article-post

--- a/templates/article/column/article_post.html
+++ b/templates/article/column/article_post.html
@@ -46,6 +46,7 @@
             success:function(e){
                 if(e=="1"){
                     layer.msg("succeed!");
+                    location.href = "{% url 'article:article_list' %}";
                 }else if(e=="2"){
                     layer.msg("sorry~");
                 }else{
