--- a/templates/article/column/article_list.html
+++ b/templates/article/column/article_list.html
@@ -22,6 +22,7 @@
     </tr>
     {% endfor %}
     </table>
+    {% include "paginator.html" %}
 </div>
 
 <script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
