realize article-detail display page with url ./article/list-article-detail for all available articles whethre login or not ,and add a link to it on page./article/list-article-titles

--- a/templates/article/list/article_titles.html
+++ b/templates/article/list/article_titles.html
@@ -10,7 +10,7 @@
 <div class="container">
     {% for article in articles %}
         <div class="list-group">
-            <a href="#" class="list-group-item active">
+            <a href="{{ article.get_url_path }}" class="list-group-item active">
                 <h4 class="list-group-item-heading">{{ article.title }}</h4>
                 <p class="list-group-item-text">作者：{{ article.author }}</p>
                 <p class="list-group-item-text">概要：{{ article.body|slice:'80'|linebreaks }}</p>
