fix 2 little mistakes which isn't serious

--- a/templates/article/list/article_detail.html
+++ b/templates/article/list/article_detail.html
@@ -1,4 +1,4 @@
-{% extends "article/base.html" %}
+{% extends "base.html" %}
 {% load staticfiles %}
 
 {% block title %}article detail {% endblock %}
