add a link to display all the articles belong to a certain author

--- a/templates/article/list/article_titles.html
+++ b/templates/article/list/article_titles.html
@@ -12,9 +12,9 @@
         <div class="list-group">
             <a href="{{ article.get_url_path }}" class="list-group-item active">
                 <h4 class="list-group-item-heading">{{ article.title }}</h4>
-                <p class="list-group-item-text">作者：{{ article.author }}</p>
-                <p class="list-group-item-text">概要：{{ article.body|slice:'80'|linebreaks }}</p>
             </a>
+                <p class="list-group-item-text">作者：<a href="{% url 'article:author_articles' article.author.username %}">{{ article.author }}</a></p>
+                <p class="list-group-item-text">概要：{{ article.body|slice:'80'|linebreaks }}</p>
         </div>
     {% endfor %}
 {% include "paginator.html" %}
