--- a/templates/article/list/article_detail.html
+++ b/templates/article/list/article_detail.html
@@ -12,6 +12,7 @@
 <p>
 <a href="{% url 'article:author_articles' article.author.username %}">{{ article.author.username }}</a>
 <span style="margin-left:20px" class="glyphicon glyphicon-thumbs-up">{{ total_likes }}like{{ total_likes | pluralize:"y,s" }}</span>
+<span style="margin-left:20px">{{ total_views }}view{{ total_views | pluralize:"s" }}</span>
 </p>
 </header>
 
