--- a/templates/article/list/article_detail.html
+++ b/templates/article/list/article_detail.html
@@ -38,6 +38,40 @@
         <p class="text-center">还没有人对此文章表态</p>
         {% endfor %}
 </div>
+
+<hr>
+<div>
+    <h3><span class="glyphicon glyphicon-bullhorn"></span> 本文有{{ article.comments.count }}评论</h3>
+    {% for comment in article.comments.all %}
+    <div>
+        <p><strong>{{ comment.commentator }}</strong>说：</p>
+        <p style="margin-left:40px;">{{ comment.body }}</p>
+    </div>
+    {% empty %}
+    <p>没有评论</p>
+    {% endfor %}
+
+    <h3><span class="glyphicon glyphicon-send"></span> 我有话要说……</h3>
+    <form action="." method="POST" class="form-horizontal" role="form">{% csrf_token %}
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">楼主</label>
+            <div class="col-sm-10">
+                {{ comment_form.commentator }}
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">内容</label>
+            <div class="col-sm-10">
+                {{ comment_form.body }}
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <p><input type="submit" name="" value="发布评论" class="btn btn-primary"></p>
+            </div>
+        </div>
+    </form>
+</div>
 </div>
 
 <div class="col-md-3">
