--- a/templates/article/list/author_articles.html
+++ b/templates/article/list/author_articles.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load article_tags %}
 
 {% load staticfiles %}
 {% block title %} articles {% endblock %}
@@ -33,6 +34,7 @@
 
 <div>
     <p>{{ user.username }}</p>
+    <p>共发表{% author_total_articles user %}篇文章。</p>
     {% if userinfo %}
         <p>{{ userinfo.company }}</p>
         <p>{{ userinfo.aboutme }}</p>
