--- a/templates/article/list/article_detail.html
+++ b/templates/article/list/article_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load article_tags %}
 {% load staticfiles %}
 
 {% block title %}article detail {% endblock %}
@@ -83,8 +84,9 @@
     </li>
     {% endfor %}
 </ol>
-</div>
-
+<hr>
+<p class="text-center"><h3>最新文章</h3></p>
+{% latest_articles 4 %}
 </div>
 
 <script src='{% static "js/jquery.js" %}'></script>
