"back to display articles in markdown with js lib named 'editormd'

--- a/templates/article/list/article_detail.html
+++ b/templates/article/list/article_detail.html
@@ -23,8 +23,8 @@
 
 <div id="editormd-view">
         <div> 
-        <!--<textarea id="append-test"style="display:none;">{{ article.body }}</textarea>--> 
-        {{ article.body | markdown }}
+        <textarea id="append-test"style="display:none;">{{ article.body }}</textarea> 
+        <!--{{ article.body | markdown }}-->
         </div>
 </div>
 <div>
