--- a/templates/article/leftslider.html
+++ b/templates/article/leftslider.html
@@ -8,4 +8,7 @@
     <div class="text-center" style="margin-top:5px">
         <p><a href="{% url 'article:article_list' %}">文章列表</a></p>
     </div>
+    <div class="text-center" style="margin-top:5px">
+        <p><a href="{% url 'article:article_tag' %}">文章标签</a></p>
+    </div>
 </div>
