--- a/templates/article/list/article_detail.html
+++ b/templates/article/list/article_detail.html
@@ -16,6 +16,7 @@
 <span style="margin-left:20px" class="glyphicon glyphicon-thumbs-up">{{ total_likes }}like{{ total_likes | pluralize:"y,s" }}</span>
 <span style="margin-left:20px">{{ total_views }}view{{ total_views | pluralize:"s" }}</span>
 </p>
+<p><span style="margin-right:10px"><strong>Tags:</strong></span>{{ article.article_tag.all | join:", "}}</p>
 </header>
 
 <link rel="stylesheet" href="{% static 'editor/css/editormd.preview.css' %}" >
