--- a/templates/article/header.html
+++ b/templates/article/header.html
@@ -7,6 +7,9 @@
         <div>
             <ul class="nav navbar-nav" role="tablist">
                 <li><a href="{% url 'article:article_column' %}">文章管理</a></li>
+            <ul class="nav navbar-nav" role="tablist">
+                <li><a href="{% url 'image:list_images' %}">图片管理</a></li>
+            </ul>
             </ul>
             <ul class="nav navbar-nav navbar-right" style="margin-right:10px">
                 <li><a href="{% url 'blog:blog_title' %}">网站首页</a></li>
