--- a/templates/article/leftslider.html
+++ b/templates/article/leftslider.html
@@ -1,14 +1,17 @@
 <div class="big-info">
-    <div class="text-center" style="margin-top:5px">
+
+    <div class="text-center" style="margin-top:5px;">
+    <p><h4>文章管理</h4></p>
         <p><a href="{% url 'article:article_column' %}">栏目管理</a></p>
-    </div>
-    <div class="text-center" style="margin-top:5px">
         <p><a href="{% url 'article:article_post' %}">文章发表</a></p>
-    </div>
-    <div class="text-center" style="margin-top:5px">
         <p><a href="{% url 'article:article_list' %}">文章列表</a></p>
-    </div>
-    <div class="text-center" style="margin-top:5px">
         <p><a href="{% url 'article:article_tag' %}">文章标签</a></p>
+   </div>
+ 
+    <hr>
+    <div class="text-center" style="margin-top:5px;">
+        <p><h4>图片管理</h4></p>
+        <p><a href="{% url 'image:list_images' %}">图片管理</a></p>
     </div>
+    
 </div>
