--- a/templates/article/header.html
+++ b/templates/article/header.html
@@ -2,7 +2,7 @@
 <div class="container">
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href="http://wwww.grace.com"><img width="100px" src="{% static 'images/back_logo.png' %}"></a>
+            <a class="navbar-brand" href="{% url 'article:article_column' %}"tsite"><img width="100px" src="{% static 'images/back_logo.png' %}"></a>
         </div>
         <div>
             <ul class="nav navbar-nav" role="tablist">
