remove media autoplay

--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
 
 <div style="width:100%; margin-top:20px;">
 <div style="width:80%;float: left; ">
-<audio controls autoplay preload="metadata" style="width:900px;">
+<audio controls preload="metadata" style="width:900px;">
     <source src="{% static 'audios/明天你依旧在我身旁.acc' %}" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
