--- a/templates/article/header.html
+++ b/templates/article/header.html
@@ -9,6 +9,8 @@
                 <li><a href="{% url 'article:article_column' %}">文章管理</a></li>
             <ul class="nav navbar-nav" role="tablist">
                 <li><a href="{% url 'image:list_images' %}">图片管理</a></li>
+            <ul class="nav navbar-nav" role="tablist">
+                <li><a href="{% url 'course:manage_course' %}">课程管理</a></li>
             </ul>
             </ul>
             <ul class="nav navbar-nav navbar-right" style="margin-right:10px">
