update delete-cource to ajax-based post

--- a/templates/course/manage/manage_course_list.html
+++ b/templates/course/manage/manage_course_list.html
@@ -1,4 +1,5 @@
 {% extends "article/base.html" %}
+{% load staticfiles %}
 {% block title %}Manage Course{% endblock %}
 
 {% block content %}
@@ -19,7 +20,7 @@
    <td>{{ course.user.username }}</td>
    <td>{{ course.created|date:"Y-m-d" }}</td>
    <td>
-        <a name="delete" href="{% url 'course:delete_course' course.id %}"><span class="glyphicon glyphicon-trash" style="margin-left:20px;"></span></a>
+        <a class="delete" name="delete" href="{% url 'course:delete_course' course.id %}"><span class="glyphicon glyphicon-trash" style="margin-left:20px;"></span></a>
     </td>
 </tr>
 
@@ -27,6 +28,55 @@
 
 </table>
 </div>
+
+<script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
+<script>
+function getCookie(name){
+    var cookieValue=null;
+    if (document.cookie && document.cookie!=''){
+    var cookies = document.cookie.split(";")
+    for(var i=0;i<cookies.length;i++){
+    var cookie = jQuery.trim(cookies[i]);
+    if (cookie.substring(0, name.length+1) ==(name +"=")){
+        cookieValue = decodeURIComponent(cookie.substring(name.length+1));
+        break;
+         }
+     }
+    }
+    return cookieValue;
+    }
+
+$(document).ready(function(){
+    var csrftoken = getCookie('csrftoken');
+    function csrfSafeMethod(method){
+        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+    }
+    $.ajaxSetup({
+        crossDomain:false,
+        beforeSend:function(xhr, settings){
+            if (!csrfSafeMethod(settings.type)){
+                xhr.setRequestHeader("X-CSRFToken", csrftoken);
+            }
+        }
+    });
+
+    var onDelete=function(){
+        alert("delete it?");
+        $.post(this.href, function(data){
+            if(data.result=="ok"){
+                window.location.reload();
+            }else{
+                alert("sth wrong");
+            }
+        })
+        .fail(function(){alert("error");});
+        return false;
+    }
+
+    $(".delete").click(onDelete);
+})
+</script>
+
 
 {% endblock %}
 
