add function:list-lessons && detail-lessons

--- a/templates/course/manage/create_lesson.html
+++ b/templates/course/manage/create_lesson.html
@@ -13,7 +13,7 @@
         </div>
         <div style="margin-top:20px;">
             <div class="col-md-2 text-left"><span>上传视频:</span></div>
-            <div class="col-md-10 text-left">{{ form.vedio }}</div>
+            <div class="col-md-10 text-left">{{ form.video }}</div>
         </div>
         <div style="margin-top:20px;">
             <div class="col-md-2 text-left"><span>视频描述:</span></div>
