--- a/templates/course/manage/detail_lesson.html
+++ b/templates/course/manage/detail_lesson.html
@@ -8,7 +8,7 @@
     </div>
     <div class="text-center">
         {% if lesson.video %}
-        <video src="{{ lesson.video.url }}" controls="controls" class="text-center"></video>
+        <video src="{{ lesson.video.url }}"  preload="load"controls="controls" class="text-center">您的浏览器不支持本视频！</video>
         <!--
         <embed src="{{ lesson.video.url }}" height="200" width="200"/>
         -->
